# DeepLOB_Library

./: .gitignore  DeepLOBvsTLOB.ipynb  deeplob_vs_dropoutdeeplob.ipynb  notebook1.ipynb  notebook2.ipynb  pyproject.toml  requirements.txt
src/deeplob_library/: data.py  models.py  train.py  unused_code.py  utils.py
src/deeplob_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
