[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplob-library"
version = "0.1.0"
description = "Research library for DeepLOB-style LOB models"
requires-python = ">=3.10"
dependencies = [
	"torch",
	"numpy",
	"pandas",
	"matplotlib",
	"tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
